--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  max-width: 100% !important;
   overflow-x: hidden !important;
 }
 h1 {
@@ -7,6 +8,7 @@ h1 {
 .btn-primary {
   background-color: #17a43b !important;
   color: yellow !important;
+  border-color: #000000 !important;
 }
 .example5 {
   height: 50px;
@@ -21,12 +23,10 @@ h1 {
   margin: 0;
   line-height: 50px;
   text-align: left;
-  /* Apply animation to this element */
   -moz-animation: example5 10s linear infinite alternate;
   -webkit-animation: example5 10s linear infinite alternate;
   animation: example5 10s linear infinite alternate;
 }
-/* Move it (define the animation) */
 @-moz-keyframes example5 {
   0% {
     -moz-transform: translateX(50%);
@@ -58,7 +58,7 @@ h1 {
 
 .owl-carousel .item img {
   max-height: 600px; /* Adjust this value to your preferred maximum height */
-  width: 100%; /* Ensure images fill the container width */
+  width: 100%;
   object-fit: cover; /* Maintain image aspect ratio */
 }
 
@@ -81,8 +81,27 @@ h1 {
   margin-bottom: 10px;
 }
 
-.home-demo .overlay-text p {
+.home-demo .overlay-text h3 {
   font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.home-demo .overlay-text button {
+  margin-top: 10px;
+}
+
+@media (max-width: 767px) {
+  .home-demo .overlay-text h1 {
+    font-size: 2rem;
+  }
+
+  .home-demo .overlay-text h3 {
+    font-size: 14px;
+  }
+
+  .home-demo .overlay-text button {
+    margin-top: 5px;
+  }
 }
 
 .video-iframe {
@@ -159,7 +178,7 @@ h1 {
   margin-top: 7rem;
 }
 .container3 {
-  max-width: 100% !important;
+  max-width: 100%;
 }
 
 .container2 {
@@ -448,4 +467,14 @@ h1 {
 }
 .footer .subscribe button:hover {
   background: #ff8500;
+}
+
+.navbar .navbar-nav .nav-link {
+  color: #ffffff;
+}
+.sm-icons {
+  flex-direction: row;
+}
+.sm-icons li {
+  padding-right: 1em;
 }
